# comet

./: .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml  biome.json  bun.lockb  components.json  eslint.config.mjs  forge.config.ts  go.mod  index.html  justfile  main.go  notes.db  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  sqlc.yml  tailwind.config.js  tsconfig.json  turbo.json  types.d.ts  vite.config.ts  vitest.config.ts  wails.json  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
app/: .env.example  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  components.json  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: attachments.rs  blossom.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  nip44_ext.rs  nip59_ext.rs  nostr.rs  notes.rs  secure_storage.rs  sync.rs  themes.rs  tools.rs
app/src-tauri/src/adapters/: mod.rs
app/src-tauri/src/adapters/blossom/: client.rs
app/src-tauri/src/adapters/filesystem/: attachments.rs  mod.rs
app/src-tauri/src/adapters/markdown/: renderer.rs
app/src-tauri/src/adapters/nostr/: comet_note_revision.rs  comet_note_snapshot.rs  comet_tag_metadata_snapshot.rs  mod.rs  nip44_ext.rs  nip59_ext.rs  protocol.rs  relay_client.rs  revision_bootstrap.rs  revision_push.rs  revision_sync_connection.rs  snapshot_bootstrap.rs  snapshot_push.rs  snapshot_sync_connection.rs  sync_manager.rs  sync_pull.rs  sync_push.rs
app/src-tauri/src/adapters/sqlite/: connection.rs  identity_repository.rs  migrations.rs  mod.rs  note_repository.rs  relay_repository.rs  revision_sync_repository.rs  snapshot_repository.rs  snapshot_sync_repository.rs  snapshot_view_repository.rs  sync_repository.rs  sync_settings_repository.rs  tag_index.rs  wikilink_index.rs
app/src-tauri/src/adapters/tauri/: key_store.rs  mod.rs
app/src-tauri/src/commands/: accounts.rs  app.rs  blob.rs  mod.rs  notes.rs  sync.rs  web.rs
app/src-tauri/src/domain/: mod.rs
app/src-tauri/src/domain/accounts/: error.rs  mod.rs  model.rs  service.rs
app/src-tauri/src/domain/blob/: error.rs  service.rs
app/src-tauri/src/domain/common/: mod.rs  text.rs  time.rs
app/src-tauri/src/domain/notes/: error.rs  model.rs  service.rs
app/src-tauri/src/domain/relay/: model.rs  service.rs
app/src-tauri/src/domain/sync/: apply_support.rs  conflict_store.rs  error.rs  event_codec.rs  history_entry.rs  mod.rs  model.rs  note_apply.rs  revision_apply_service.rs  revision_codec.rs  revision_negentropy.rs  revision_service.rs  service.rs  snapshot_apply_service.rs  snapshot_service.rs  tag_metadata_apply.rs  tombstone_apply.rs  vector_clock.rs
app/src-tauri/src/infra/: cache.rs  mod.rs  themes.rs
app/src-tauri/src/ports/: blob_storage.rs  key_store.rs  mod.rs  note_repository.rs
assets/: icon.icns
blossom/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  fly.toml  package.json  railway.toml
contextmenu/: notecontextmenu.go  notetagcontextmenu.go  tagcontextmenu.go  trashnotecontextmenu.go
db/: models.go  (+18 more)
mobile/rust/comet-mobile/: Cargo.toml
mobile/rust/comet-mobile/src/: api.rs  app_state.rs  db.rs  error.rs  lib.rs
mobile/rust/comet-mobile/src/adapters/: mod.rs
mobile/rust/comet-mobile/src/adapters/blossom/: client.rs
mobile/rust/comet-mobile/src/adapters/filesystem/: attachments.rs
mobile/rust/comet-mobile/src/adapters/mobile/: key_store.rs
mobile/rust/comet-mobile/src/adapters/nostr/: mod.rs  protocol.rs  sync_manager.rs  sync_pull.rs  sync_push.rs
mobile/rust/comet-mobile/src/adapters/sqlite/: mod.rs  note_repository.rs
mobile/rust/comet-mobile/src/domain/: mod.rs
mobile/rust/comet-mobile/src/domain/accounts/: error.rs  model.rs  service.rs
mobile/rust/comet-mobile/src/domain/blob/: service.rs
mobile/rust/comet-mobile/src/domain/common/: text.rs
mobile/rust/comet-mobile/src/domain/notes/: model.rs  service.rs
mobile/rust/comet-mobile/src/domain/relay/: model.rs  service.rs
mobile/rust/comet-mobile/src/domain/sync/: model.rs
mobile/rust/comet-mobile/src/ports/: key_store.rs  markdown_renderer.rs
src-tauri/: Cargo.toml  captains_log.db  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachments.rs  blossom.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  nip44_ext.rs  nip59_ext.rs  nostr.rs  notes.rs  sync.rs  themes.rs  utils.rs
src-tauri/src/db/: mod.rs  notes.rs  notes_tags.rs  queries.rs  settings.rs  tags.rs
src-tauri/src/services/: context_menu_service.rs  mod.rs  note_service.rs  note_tag_service.rs  settings_service.rs  tag_service.rs
(+1298 files in other folders)
