[package]
name = "comet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
notify = "8.2.0"
walkdir = "2.5.0"
gray_matter = "0.3.2"
rusqlite_migration = "2.4.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
sha2 = "0.10"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["native-tls"] }
base64 = "0.22.1"
regex-lite = "0.1.9"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
hmac = "0.12.1"
thiserror = "2"
url = "2"
