[package]
name = "comet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "comet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7.4"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
notify = "8.2.0"
walkdir = "2.5.0"
gray_matter = "0.3.2"
rusqlite_migration = "2.4.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
sha2 = "0.10"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["native-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64 = "0.22.1"
regex-lite = "0.1.9"
chacha20 = "0.9"
chacha20poly1305 = "0.10.1"
comrak = { version = "0.51", default-features = false }
subtle = "2"
getrandom = "0.3"
hex = "0.4.3"
hmac = "0.12.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
url = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2"
tauri-plugin-secure-storage = "1.4.0"
negentropy = "0.5.0"

[dev-dependencies]
postgres = "0.19"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
