[package]
name = "comet-mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "comet_mobile"

[dependencies]
uniffi = { version = "0.29", features = ["cli", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
rusqlite_migration = "2.4.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["native-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64 = "0.22.1"
regex-lite = "0.1.9"
chacha20 = "0.9"
chacha20poly1305 = "0.10.1"
subtle = "2"
getrandom = "0.3"
hex = "0.4.3"
hmac = "0.12.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
url = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build", "tokio"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
